fixed menu toggle bug on mobile devices on blog page

--- a/docs/style.css
+++ b/docs/style.css
@@ -24,6 +24,9 @@
   height: 30px;
   width: 30px;
 }
+.navbar-brand {
+  font-family: 'Permanent Marker', cursive;
+}
 #navbarSupportedContent ul {
   clear: both;
 }
